--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/EricMellow/TDD#readme",
   "devDependencies": {
+    "babel-preset-env": "^1.6.1",
     "chai": "^4.1.2",
     "eslint": "^4.18.2",
     "mocha": "^5.0.4"
